<resources>
    <string name="app_name">Wbar</string>

    <!-- Strings used for menu -->
    <string name="menuMaster">Maestro Productos</string>
    <string name="menuMoney">Agregar Fondos</string>
    <string name="menuConsumo">Ver consumo</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="principal">Volver a inicio</string>
    <string name="grabar">Grabar</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="id">ID</string>
    <string name="item">Producto</string>
    <string name="unit">Unidad</string>
    <string name="price">00000</string>
    <string name="pub">Nombre Pub/Shopperia</string>
    <string name="url">http:// ...</string>

    <string name="ticket">Total $ %1$s</string>
    <string name="ok">ok</string>
    <string name="cancel">cancelar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>