<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wbar.MainActivity">
    <item
        android:id="@+id/menuMaster"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="300"
        android:title="@string/menuMaster"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuMoney"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="200"
        android:title="@string/menuMoney"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuConsumo"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/menuConsumo"
        app:showAsAction="never" />

</menu>