<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/UltraLigthYellow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:alpha="0.5"
            android:background="@drawable/back"

            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgDrink"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:alpha="1"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/item"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintStart_toEndOf="@+id/imgDrink"
            app:layout_constraintTop_toTopOf="@+id/img"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="@+id/imgDrink"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="@+id/imgDrink"
            app:layout_constraintTop_toTopOf="@+id/img"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/unit"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintStart_toEndOf="@+id/tvItem"
            app:layout_constraintTop_toTopOf="@+id/img" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/price"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/img"
            app:layout_constraintEnd_toEndOf="@+id/img"
            app:layout_constraintTop_toTopOf="@+id/img" />

        <TextView
            android:id="@+id/tvPub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pub"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/img"
            app:layout_constraintStart_toEndOf="@+id/imgDrink"
            app:layout_constraintTop_toTopOf="@+id/img" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>