<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="400dp"
            android:layout_height="146dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPubName" />

        <TextView
            android:id="@+id/tvPubName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pub"
            app:layout_constraintEnd_toEndOf="@+id/imgBack"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgItem"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imgBack"
            app:layout_constraintStart_toStartOf="@+id/imgBack"
            app:layout_constraintTop_toTopOf="@+id/imgBack"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/item"
            app:layout_constraintBottom_toBottomOf="@+id/imgItem"
            app:layout_constraintStart_toEndOf="@+id/imgItem"
            app:layout_constraintTop_toTopOf="@+id/imgItem"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/unit"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvItem"
            app:layout_constraintStart_toEndOf="@+id/tvItem"
            app:layout_constraintTop_toTopOf="@+id/tvItem" />

        <TextView
            android:id="@+id/tvCtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btDown"
            app:layout_constraintEnd_toEndOf="@+id/btUp"
            app:layout_constraintStart_toStartOf="@+id/btUp"
            app:layout_constraintTop_toBottomOf="@+id/btUp" />

        <Button
            android:id="@+id/btUp"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginTop="8dp"
            android:text="+"
            app:layout_constraintStart_toEndOf="@+id/imgItem"
            app:layout_constraintTop_toTopOf="@+id/imgItem" />

        <Button
            android:id="@+id/btDown"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="190dp"
            android:layout_marginBottom="8dp"
            android:text="-"
            app:layout_constraintBottom_toBottomOf="@+id/imgItem"
            app:layout_constraintStart_toEndOf="@+id/imgItem" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:text="Agregar"
            app:layout_constraintEnd_toEndOf="@+id/imgBack"
            app:layout_constraintStart_toStartOf="@+id/imgBack"
            app:layout_constraintTop_toBottomOf="@+id/imgBack" />

        <ListView
            android:id="@+id/cardList"
            android:layout_width="378dp"
            android:layout_height="158dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3">

        </ListView>

        <Button
            android:id="@+id/btPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="Pagar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardList" />

        <Button
            android:id="@+id/btHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardList" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/imgItem"
            app:layout_constraintEnd_toStartOf="@+id/btUp"
            app:layout_constraintStart_toEndOf="@+id/tvTXTUnit"
            app:layout_constraintTop_toTopOf="@+id/imgItem" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="000000"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgItem"
            app:layout_constraintEnd_toStartOf="@+id/btUp"
            app:layout_constraintStart_toEndOf="@+id/tvTXTTotal"
            app:layout_constraintTop_toTopOf="@+id/imgItem"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/tvTXTUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Valor unitario"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgItem"
            app:layout_constraintStart_toEndOf="@+id/imgItem"
            app:layout_constraintTop_toTopOf="@+id/imgItem" />

        <TextView
            android:id="@+id/tvTXTTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Valor Total"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgItem"
            app:layout_constraintStart_toEndOf="@+id/imgItem"
            app:layout_constraintTop_toTopOf="@+id/imgItem"
            app:layout_constraintVertical_bias="0.809" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>